# pfe

./: .gitignore  LICENSE  MANIFEST.in  README.md  prospector.yaml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
docs/: requirements.txt
docs/source/: algebra.rst  conf.py  geometry.rst  helmholtz_2d.rst  index.rst  interpolation.rst  lpe_2d.rst  mesh.rst  model.rst  quadrature.rst  references.bib  shape.rst
examples/helmholtz_2d/cylinder/: example.ipynb
examples/lpe_2d/cbc/: domain1.geo  domain2.geo  example.ipynb
examples/lpe_2d/duct_2d/: example.ipynb
examples/lpe_2d/duct_modes_2d/: duct.geo  example.ipynb
pfe/: __init__.py  constant.py  function.py  mesh.py  model.py  vector.py
pfe/algebra/: __init__.py  linear_system.py
pfe/geometry/: __init__.py  line3_2d.py  locate.py  point.py  triangle6_2d.py
pfe/interpolation/: __init__.py  lagrange2.py
pfe/models/: __init__.py
pfe/models/helmholtz_2d/: __init__.py  cbc.py  duct_modes.py  impedance.py  main.py  velocity.py  wall.py
pfe/models/lpe_2d/: __init__.py  cbc.py  duct_modes.py  impedance.py  main.py  velocity.py  wall.py
pfe/models/lpe_axi/: __init__.py  axis.py  duct_modes.py  impedance.py  main.py  velocity.py  wall.py
pfe/quadrature/: __init__.py  main.py  make_quadrature.py
pfe/shape/: __init__.py  l3.py  make_basis.py  t6.py
tests/field_points/: domain.msh  test_field_points.py
tests/lpe_2d/cbc/: test_cbc.py
tests/lpe_2d/duct_modes/: test_duct_modes.py
tests/lpe_2d/impedance/: duct.msh  test_impedance.py
