[metadata]
name = pfe
author = Gwénaël Gabard
author_email = gwenael.gabard@univ-lemans.fr
version = 0.1.0
description = Python Finite Elements
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
keywords = finite element, numerical simulation, computational modelling

[options]
include_package_data = True
packages = find:
